--- a/deletefight.css
+++ b/deletefight.css
@@ -1,68 +1,94 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
-body{
+  }
+  
+  body {
     background-image: url("https://media.istockphoto.com/id/1332501286/photo/aerial-flying-airplane-and-sky-landscape-close-up.jpg?s=170667a&w=0&k=20&c=dM5w_73VjhgAhE0tSeJLC_2Cpp1zu-3zsCS38_3DdrU=");
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-#inputForm {
-    margin-top: 100px;
-    margin-left: 200px;
+  }
+  
+  #inputForm {
+    margin: 100px auto;
+    max-width: 400px;
     background-color: #f2f2f2;
     padding: 20px;
     text-align: center;
     border: 1px solid #555;
     box-shadow: 8px 8px;
-    max-width: 400px;
     background-color: #ffffff;
     border-radius: 4px;
-    box-shadow: 8px 8px;
-}
-
-input {
+  }
+  
+  input {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #dddddd;
     border-radius: 4px;
     font-weight: bold;
-}
-
-#list-container{
-    margin-top: 100px;
-    margin-left: 200px;
-    background-color: #f2f2f2;
-    width: 550px;
+  }
+  
+  #list-container {
+    margin: 100px auto;
+    width: 100%;
+    max-width: 550px;
+    background-color: transparent;
     padding: 12px;
     text-align: center;
-    border: 1px solid #555;
-    box-shadow: 8px 8px;
-}
-.table{
+  }
+  
+  .table {
     padding: 12px;
-}
-.thead{
+  }
+  
+  .thead {
     background-color: #555;
-}
-
-#tbody1{
+  }
+  
+  #tbody1 {
     background-color: blue;
-}
-.thead th{
+  }
+  
+  .thead th {
     padding: 20px;
     font-size: 18px;
     color: wheat;
     font-weight: bolder;
     text-align: center;
-}
-
-#tbody1 td{
+  }
+  
+  #tbody1 td {
     padding: 20px;
     color: white;
     text-align: center;
-}
+  }
+  
+  @media (max-width: 768px) {
+    body {
+        background-image: url("https://media.istockphoto.com/id/1332501286/photo/aerial-flying-airplane-and-sky-landscape-close-up.jpg?s=170667a&w=0&k=20&c=dM5w_73VjhgAhE0tSeJLC_2Cpp1zu-3zsCS38_3DdrU=");
+        background-repeat: no-repeat;
+        background-size: 500px 1200px;
+      }
+    #inputForm,
+    #list-container {
+      margin: 50px auto;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    body {
+        background-image: url("https://media.istockphoto.com/id/1332501286/photo/aerial-flying-airplane-and-sky-landscape-close-up.jpg?s=170667a&w=0&k=20&c=dM5w_73VjhgAhE0tSeJLC_2Cpp1zu-3zsCS38_3DdrU=");
+        background-repeat: no-repeat;
+        background-size: 500px 1200px;
+      }
+    #inputForm,
+    #list-container {
+      margin: 20px auto;
+      padding: 10px;
+    }
+  }
+  
