--- a/flightbooking.css
+++ b/flightbooking.css
@@ -1,25 +1,26 @@
-.location-selection{
-    margin-top: 300px;
-    margin-left: 200px;
-    background-color: #f2f2f2;
-    width: 480px;
+.location-selection {
+    margin: 50px auto;
+    background-color: transparent;
+    width: 90%;
+    max-width: 480px;
     padding: 12px;
     text-align: center;
     border: 1px solid #555;
     box-shadow: 8px 8px;
 }
-.location-selection h4{
+
+.location-selection h4 {
     padding: 12px 0;
-    font-size: 28px;
+    font-size: 24px;
 }
 
-.label-from{
+.label-from {
     padding: 12px 0;
-    font-size: 18px;
+    font-size: 16px;
 }
 
-.fromLocation{
+.fromLocation {
     padding: 6px 0;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
