--- a/userhome.css
+++ b/userhome.css
@@ -12,10 +12,10 @@ body{
 }
 
 .sidemenu{
-    height: 100%;
+    height: 80%;
     width: 280px;
     left: -280px;
-    position: fixed;
+    position: absolute;
     background-color: #f2f2f2;
     transition: 0.5s ease;
     box-shadow: 5px 10px #333;
